debian/changelog
ros-melodic-rail-segmentation (0.1.14-1stretch) stretch; urgency=high

  * Added new service which takes in a point cloud to segment
  * Contributors: David Kent, Weiyu Liu

 -- Russell Toris <russell.toris@gmail.com>  Thu, 27 Jun 2019 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.13-1stretch) stretch; urgency=high

  * Safer wait for point cloud that checks timestamps
  * Switched continuous point cloud polling for waitForMessage
  * Added an option to publish marker labels for each cluster for debugging
  * Added a flag to the segmentation zone config to require a table; if this is set to true, segmentation will only be performed if a surface was successfully detected in the current segmentation zone.
  * New service for re-calculating (or filling in uncalculated) features of segmented objects, assuming that at minimum the point cloud field is set
  * Exposed cluster tolerance as a parameter
  * Optional parameter for cropping the workspace before table detection (defaults to false so it won't change behavior for anything currently using rail_segmentation), which potentially speeds up segmentation but may cause table detection to fail more often when segmenting in small, cluttered segmentation zones
  * Contributors: David Kent

 -- Russell Toris <russell.toris@gmail.com>  Fri, 07 Jun 2019 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.12-1stretch) stretch; urgency=high

  * Replacing deprecated pcl call to upgrade ROS versions
  * Contributors: David Kent

 -- Russell Toris <russell.toris@gmail.com>  Fri, 12 Oct 2018 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.11-1stretch) stretch; urgency=high

  * Segmenter.h: Fix compilation error with -std=c++11.
    This commit fixes compilation errors due to compilation with std=c++11,
    such as:
    include/rail_segmentation/Segmenter.h:82:23: error: ‘constexpr’ needed for
    in-class initialization of static data member
    ‘const double rail::segmentation::Segmenter::SAC_EPS_ANGLE’ of
    non-integral type [-fpermissive]
    static const double SAC_EPS_ANGLE = 0.15;
    ^~~~~~~~~~~~~
    Signed-off-by: Elvis Dowson <elvis.dowson@gmail.com>
  * Fixing a small bug so that the segment_objects service matches the topic data
  * Better bounding box calculation, added average rgb and cielab color to segmented object messages as they are calculated anyway, and added an alternative service api, segment_objects, that returns the segmented object list in the service response (while still broadcasting the segmented object list on the topic)
  * Constant definition fix for functions with reference parameters
  * Added option for euclidean + RGB clustering instead of solely euclidean distance
  * Contributors: David Kent, Elvis Dowson, Levon Avagyan, Russell Toris, Siddhartha Banerjee

 -- Russell Toris <russell.toris@gmail.com>  Fri, 21 Sep 2018 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.10-1stretch) stretch; urgency=high

  * Merge pull request #4 <https://github.com/GT-RAIL/rail_segmentation/issues/4> from velveteenrobot/publish-table
    Now publishes table as SegmentedObject and table marker as Marker
  * Now publishes table as SegmentedObject and table marker as Marker
  * New travis for indigo and jade
  * email update
  * Contributors: Russell Toris, Sarah Elliott

 -- Russell Toris <russell.toris@gmail.com>  Sat, 17 Sep 2016 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.9-1stretch) stretch; urgency=high

  * Update .travis.yml
  * Update README.md
  * Update package.xml
  * Added a node that continuously calls the segmentation service
  * Contributors: David Kent

 -- Russell Toris <russell.toris@gmail.com>  Tue, 23 Feb 2016 05:00:00 -0000

ros-melodic-rail-segmentation (0.1.8-1stretch) stretch; urgency=high

  * allows for params of min/max cluster size
  * Contributors: Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Thu, 14 May 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.7-1stretch) stretch; urgency=high

  * removed hard coded constants
  * angle fix
  * Approximated segmented object orientation with PCA
  * Contributors: David Kent, Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Thu, 07 May 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.6-1stretch) stretch; urgency=high

  * cleared flag added
  * Contributors: Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Wed, 22 Apr 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.5-1stretch) stretch; urgency=high

  * Added center point calculation for segmented objects
  * Contributors: David Kent

 -- Russell Toris <russell.toris@gmail.com>  Wed, 15 Apr 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.4-1stretch) stretch; urgency=high

  * quick travis fix
  * old parser format
  * Update .travis.yml
  * Contributors: Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Tue, 14 Apr 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.3-1stretch) stretch; urgency=high

  * bounding box info added
  * Contributors: Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Fri, 10 Apr 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.2-1stretch) stretch; urgency=high

  * cmake cleanup
  * header cleanup
  * header cleanup
  * header cleanup
  * checks for incoming point cloud first
  * new lines added
  * new lines added
  * more const ptrs
  * moved to ptr based storage
  * const ptrs
  * Contributors: Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Fri, 03 Apr 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.1-1stretch) stretch; urgency=high

  * segmentation debug is now latched
  * Merge branch 'develop' of github.com:WPI-RAIL/rail_segmentation into develop
  * redid zones for default
  * Fixed centroid calculation when the segmentation frame doesn't match the bounding box frame
  * Contributors: David Kent, Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Tue, 31 Mar 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.1.0-1stretch) stretch; urgency=high

  * added RGB image to message
  * average RGB on marker
  * uses indices instead of new PCs
  * Merge pull request #1 from WPI-RAIL/refactor
    Refactor
  * merge conflicts
  * Revert "plane detection refactored"
    This reverts commit 7160b0b12e55755451ec5c8a9318e05552924cc6.
  * doc added
  * cleanup of old files
  * first pass of new segmentation node
  * plane detection refactored
  * Added a recognize all action which gives feedback throughout the recognition process; the recognize all server remains for compatibility, but it's recommended to use the action server instead.
  * Edited .travis.yml
  * Merge branch 'develop' of github.com:WPI-RAIL/rail_segmentation into develop
  * Updated to reflect moving some messages from rail_segmentation to rail_manipulation_messages
  * Contributors: David Kent, Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Tue, 24 Mar 2015 04:00:00 -0000

ros-melodic-rail-segmentation (0.0.5-1stretch) stretch; urgency=high

  * Fixed a possible exception thrown due to transforming a point cloud at an invalid time
  * Merge branch 'develop' of github.com:WPI-RAIL/rail_segmentation into develop
  * Added an automatic segmentation service which will determine how best to segment based on camera angle
  * Contributors: David Kent

 -- Russell Toris <russell.toris@gmail.com>  Tue, 17 Feb 2015 05:00:00 -0000

ros-melodic-rail-segmentation (0.0.4-1stretch) stretch; urgency=high

  * Update .travis.yml
  * visualized object list initialization
  * Contributors: David Kent, Russell Toris

 -- Russell Toris <russell.toris@gmail.com>  Fri, 06 Feb 2015 05:00:00 -0000

ros-melodic-rail-segmentation (0.0.3-1stretch) stretch; urgency=high

  * Incorporated calls to object recognition
  * Contributors: David Kent

 -- Russell Toris <russell.toris@gmail.com>  Wed, 22 Oct 2014 04:00:00 -0000

ros-melodic-rail-segmentation (0.0.2-1stretch) stretch; urgency=high

  * added object clearing service and clearing on segmentation of zero objects
  * Updated segmentation with an option for on-robot segmentation, added documentation
  * Updated segmentation service to allow segmentation in either the map frame or the robot frame, also added optional object clearing on segmentation call
  * merge
  * updates for pick and place
  * Contributors: dekent

 -- Russell Toris <russell.toris@gmail.com>  Fri, 03 Oct 2014 04:00:00 -0000

ros-melodic-rail-segmentation (0.0.1-1stretch) stretch; urgency=high

  * bad source file fixed
  * pcl_ros build
  * pcl_ros build
  * travis tests
  * travis now runs updates
  * indigo ros_pcl added
  * cleanup for release
  * segmentation tuning and updates
  * stopped segmentation from identifying non-horizontal planes
  * initial commit
  * Contributors: Russell Toris, dekent

 -- Russell Toris <russell.toris@gmail.com>  Mon, 22 Sep 2014 04:00:00 -0000


